--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
 /*
-! tailwindcss v3.1.8 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -34,6 +34,7 @@
 2. Prevent adjustments of font size after orientation changes in iOS.
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
+5. Use the user's configured `sans` font-feature-settings by default.
 */
 
 html {
@@ -48,6 +49,8 @@ html {
   /* 3 */
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 4 */
+  font-feature-settings: normal;
+  /* 5 */
 }
 
 /*
@@ -414,6 +417,12 @@ video {
   height: auto;
 }
 
+/* Make elements with the HTML hidden attribute stay hidden by default */
+
+[hidden] {
+  display: none;
+}
+
 [type='text'],[type='email'],[type='url'],[type='password'],[type='number'],[type='date'],[type='datetime-local'],[type='month'],[type='search'],[type='tel'],[type='time'],[type='week'],[multiple],textarea,select{
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -474,7 +483,6 @@ select{
   background-size: 1.5em 1.5em;
   padding-right: 2.5rem;
   -webkit-print-color-adjust: exact;
-     color-adjust: exact;
           print-color-adjust: exact;
 }
 
@@ -485,7 +493,6 @@ select{
   background-size: initial;
   padding-right: 0.75rem;
   -webkit-print-color-adjust: unset;
-     color-adjust: unset;
           print-color-adjust: unset;
 }
 
@@ -495,7 +502,6 @@ select{
           appearance: none;
   padding: 0;
   -webkit-print-color-adjust: exact;
-     color-adjust: exact;
           print-color-adjust: exact;
   display: inline-block;
   vertical-align: middle;
@@ -586,22 +592,18 @@ select{
 #resume * a:hover{
   --tw-text-opacity: 1;
   color: rgb(6 182 212 / var(--tw-text-opacity));
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 #resume * a:not(.italic){
-  width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 @media print{
   #resume * a:not(.italic){
-    -webkit-text-decoration-line: none;
-            text-decoration-line: none;
+    text-decoration-line: none;
   }
 }
 
@@ -610,53 +612,6 @@ select{
 }
 
 *, ::before, ::after{
-  --tw-border-spacing-x: 0;
-  --tw-border-spacing-y: 0;
-  --tw-translate-x: 0;
-  --tw-translate-y: 0;
-  --tw-rotate: 0;
-  --tw-skew-x: 0;
-  --tw-skew-y: 0;
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  --tw-pan-x:  ;
-  --tw-pan-y:  ;
-  --tw-pinch-zoom:  ;
-  --tw-scroll-snap-strictness: proximity;
-  --tw-ordinal:  ;
-  --tw-slashed-zero:  ;
-  --tw-numeric-figure:  ;
-  --tw-numeric-spacing:  ;
-  --tw-numeric-fraction:  ;
-  --tw-ring-inset:  ;
-  --tw-ring-offset-width: 0px;
-  --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(59 130 246 / 0.5);
-  --tw-ring-offset-shadow: 0 0 #0000;
-  --tw-ring-shadow: 0 0 #0000;
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  --tw-blur:  ;
-  --tw-brightness:  ;
-  --tw-contrast:  ;
-  --tw-grayscale:  ;
-  --tw-hue-rotate:  ;
-  --tw-invert:  ;
-  --tw-saturate:  ;
-  --tw-sepia:  ;
-  --tw-drop-shadow:  ;
-  --tw-backdrop-blur:  ;
-  --tw-backdrop-brightness:  ;
-  --tw-backdrop-contrast:  ;
-  --tw-backdrop-grayscale:  ;
-  --tw-backdrop-hue-rotate:  ;
-  --tw-backdrop-invert:  ;
-  --tw-backdrop-opacity:  ;
-  --tw-backdrop-saturate:  ;
-  --tw-backdrop-sepia:  ;
-}
-
-::-webkit-backdrop{
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
   --tw-translate-x: 0;
@@ -850,7 +805,6 @@ select{
   background-size: 1.5em 1.5em;
   padding-right: 2.5rem;
   -webkit-print-color-adjust: exact;
-     color-adjust: exact;
           print-color-adjust: exact;
 }
 
@@ -860,7 +814,6 @@ select{
           appearance: none;
   padding: 0;
   -webkit-print-color-adjust: exact;
-     color-adjust: exact;
           print-color-adjust: exact;
   display: inline-block;
   vertical-align: middle;
@@ -970,44 +923,20 @@ select{
   position: relative;
 }
 
-.bottom-\[2px\]{
-  bottom: 2px;
-}
-
-.left-\[2px\]{
-  left: 2px;
-}
-
-.top-0\.5{
-  top: 0.125rem;
-}
-
-.left-0\.5{
-  left: 0.125rem;
-}
-
-.top-0{
-  top: 0px;
+.bottom-0{
+  bottom: 0px;
 }
 
 .left-0{
   left: 0px;
 }
 
-.left-\[3px\]{
-  left: 3px;
-}
-
-.bottom-0{
-  bottom: 0px;
-}
-
 .right-0{
   right: 0px;
 }
 
-.m-0{
-  margin: 0px;
+.top-0{
+  top: 0px;
 }
 
 .my-auto{
@@ -1036,44 +965,12 @@ select{
   margin-left: auto;
 }
 
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.ml-2{
-  margin-left: 0.5rem;
+.mb-\[5px\]{
+  margin-bottom: 5px;
 }
 
 .ml-4{
   margin-left: 1rem;
-}
-
-.ml-\[-2px\]{
-  margin-left: -2px;
-}
-
-.mb-\[-1px\]{
-  margin-bottom: -1px;
-}
-
-.mt-\[-2px\]{
-  margin-top: -2px;
-}
-
-.mt-auto{
-  margin-top: auto;
-}
-
-.\!-ml-1{
-  margin-left: -0.25rem !important;
-}
-
-.\!mt-\[1\.125rem\]{
-  margin-top: 1.125rem !important;
-}
-
-.mb-\[5px\]{
-  margin-bottom: 5px;
 }
 
 .mt-4{
@@ -1086,6 +983,10 @@ select{
 
 .mt-1{
   margin-top: 0.25rem;
+}
+
+.ml-2{
+  margin-left: 0.5rem;
 }
 
 .mt-0{
@@ -1136,36 +1037,12 @@ select{
   height: 0px;
 }
 
-.h-screen{
-  height: 100vh;
-}
-
-.\!h-4{
-  height: 1rem !important;
-}
-
-.\!h-10{
-  height: 2.5rem !important;
-}
-
-.h-8{
-  height: 2rem;
-}
-
-.h-16{
-  height: 4rem;
-}
-
 .h-full{
   height: 100%;
 }
 
 .h-24{
   height: 6rem;
-}
-
-.max-h-\[4\.9in\]{
-  max-height: 4.9in;
 }
 
 .min-h-screen{
@@ -1185,7 +1062,6 @@ select{
 }
 
 .w-max{
-  width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
 }
@@ -1194,42 +1070,13 @@ select{
   width: 100%;
 }
 
-.w-3\/5{
-  width: 60%;
-}
-
-.w-2\/5{
-  width: 40%;
-}
-
-.\!w-7{
-  width: 1.75rem !important;
-}
-
-.\!w-10{
-  width: 2.5rem !important;
-}
-
-.\!w-\[5rem\]{
-  width: 5rem !important;
-}
-
-.w-12{
-  width: 3rem;
-}
-
 .min-w-max{
-  min-width: -webkit-max-content;
   min-width: -moz-max-content;
   min-width: max-content;
 }
 
 .max-w-\[92rem\]{
   max-width: 92rem;
-}
-
-.max-w-\[3\.65in\]{
-  max-width: 3.65in;
 }
 
 .max-w-\[750px\]{
@@ -1274,16 +1121,6 @@ select{
           user-select: none;
 }
 
-.\!select-all{
-  -webkit-user-select: all !important;
-     -moz-user-select: all !important;
-          user-select: all !important;
-}
-
-.resize-none{
-  resize: none;
-}
-
 .list-disc{
   list-style-type: disc;
 }
@@ -1307,16 +1144,12 @@ select{
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -1416,52 +1249,10 @@ select{
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.space-y-1\.5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.375rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
-}
-
-.space-y-1 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
-
-.space-y-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.space-x-2 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
 .space-x-1 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(0.25rem * var(--tw-space-x-reverse));
   margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-x-2\.5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.625rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.625rem * calc(1 - var(--tw-space-x-reverse)));
-}
-
-.space-y-0\.5 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.125rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.125rem * var(--tw-space-y-reverse));
-}
-
-.space-y-0 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0px * var(--tw-space-y-reverse));
 }
 
 .space-x-3 > :not([hidden]) ~ :not([hidden]){
@@ -1506,28 +1297,16 @@ select{
   border-radius: 0.25rem;
 }
 
-.border-2{
-  border-width: 2px;
-}
-
-.\!border-0{
-  border-width: 0px !important;
-}
-
 .border-0{
   border-width: 0px;
 }
 
+.border-2{
+  border-width: 2px;
+}
+
 .border-b{
   border-bottom-width: 1px;
-}
-
-.border-l-0{
-  border-left-width: 0px;
-}
-
-.border-t-0{
-  border-top-width: 0px;
 }
 
 .border-b-2{
@@ -1584,19 +1363,6 @@ select{
 .bg-indigo-600{
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500\/10{
-  background-color: rgb(107 114 128 / 0.1);
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.\!bg-transparent{
-  background-color: transparent !important;
 }
 
 .bg-gradient-to-br{
@@ -1656,14 +1422,6 @@ select{
   padding: 1rem;
 }
 
-.p-3{
-  padding: 0.75rem;
-}
-
-.p-\[3px\]{
-  padding: 3px;
-}
-
 .py-52{
   padding-top: 13rem;
   padding-bottom: 13rem;
@@ -1687,16 +1445,6 @@ select{
 .px-7{
   padding-left: 1.75rem;
   padding-right: 1.75rem;
-}
-
-.px-\[3px\]{
-  padding-left: 3px;
-  padding-right: 3px;
-}
-
-.py-\[1px\]{
-  padding-top: 1px;
-  padding-bottom: 1px;
 }
 
 .px-6{
@@ -1752,22 +1500,6 @@ select{
   padding-bottom: 5rem;
 }
 
-.pt-\[3px\]{
-  padding-top: 3px;
-}
-
-.pb-\[2px\]{
-  padding-bottom: 2px;
-}
-
-.pl-0\.5{
-  padding-left: 0.125rem;
-}
-
-.pl-0{
-  padding-left: 0px;
-}
-
 .pb-80{
   padding-bottom: 20rem;
 }
@@ -1782,10 +1514,6 @@ select{
 
 .font-inter{
   font-family: "Inter", san-serif;
-}
-
-.font-mono{
-  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .font-serif{
@@ -1830,14 +1558,6 @@ select{
   font-size: 1.075rem;
 }
 
-.text-\[8px\]{
-  font-size: 8px;
-}
-
-.text-\[7px\]{
-  font-size: 7px;
-}
-
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -1866,18 +1586,6 @@ select{
 
 .uppercase{
   text-transform: uppercase;
-}
-
-.\!uppercase{
-  text-transform: uppercase !important;
-}
-
-.lowercase{
-  text-transform: lowercase;
-}
-
-.\!normal-case{
-  text-transform: none !important;
 }
 
 .italic{
@@ -1959,8 +1667,7 @@ select{
 }
 
 .underline{
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
+  text-decoration-line: underline;
 }
 
 .antialiased{
@@ -1971,12 +1678,6 @@ select{
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2025,16 +1726,6 @@ select{
   text-shadow: 1px 1px 3px rgb(36 37 47 / 25%);
 }
 
-.selection\:bg-indigo-400 *::-moz-selection{
-  --tw-bg-opacity: 1;
-  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
-}
-
-.selection\:bg-indigo-400 *::selection{
-  --tw-bg-opacity: 1;
-  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
-}
-
 .selection\:bg-cyan-500\/75 *::-moz-selection{
   background-color: rgb(6 182 212 / 0.75);
 }
@@ -2051,16 +1742,6 @@ select{
 .selection\:text-white *::selection{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.selection\:bg-indigo-400::-moz-selection{
-  --tw-bg-opacity: 1;
-  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
-}
-
-.selection\:bg-indigo-400::selection{
-  --tw-bg-opacity: 1;
-  background-color: rgb(129 140 248 / var(--tw-bg-opacity));
 }
 
 .selection\:bg-cyan-500\/75::-moz-selection{
@@ -2241,12 +1922,6 @@ select{
     max-width: none;
   }
 
-  .print\:scale-100{
-    --tw-scale-x: 1;
-    --tw-scale-y: 1;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
   .print\:gap-y-1\.5{
     row-gap: 0.375rem;
   }
@@ -2260,14 +1935,34 @@ select{
          column-gap: 1.25rem;
   }
 
-  .print\:gap-x-16{
-    -moz-column-gap: 4rem;
-         column-gap: 4rem;
+  .print\:gap-x-6{
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
   }
 
   .print\:gap-x-7{
     -moz-column-gap: 1.75rem;
          column-gap: 1.75rem;
+  }
+
+  .print\:gap-x-16{
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
+  }
+
+  .print\:gap-x-10{
+    -moz-column-gap: 2.5rem;
+         column-gap: 2.5rem;
+  }
+
+  .print\:gap-x-12{
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+  }
+
+  .print\:gap-x-14{
+    -moz-column-gap: 3.5rem;
+         column-gap: 3.5rem;
   }
 
   .print\:pb-0{
@@ -2291,54 +1986,6 @@ select{
   .print\:text-\[11px\]{
     font-size: 11px;
   }
-
-  .print\:shadow-none{
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  }
-}
-
-@media (min-width: 768px){
-  .md\:inline{
-    display: inline;
-  }
-
-  .md\:max-w-none{
-    max-width: none;
-  }
-
-  .md\:max-w-4xl{
-    max-width: 56rem;
-  }
-
-  .md\:grid-cols-2{
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-}
-
-@media (min-width: 1024px){
-  .lg\:mt-0{
-    margin-top: 0px;
-  }
-
-  .lg\:h-\[4\.9in\]{
-    height: 4.9in;
-  }
-
-  .lg\:w-\[3\.65in\]{
-    width: 3.65in;
-  }
-
-  .lg\:scale-\[1\.8\]{
-    --tw-scale-x: 1.8;
-    --tw-scale-y: 1.8;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-  }
-
-  .lg\:items-center{
-    align-items: center;
-  }
 }
 
 @media (min-width: 500px){
@@ -2357,5 +2004,23 @@ select{
   .xs\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:inline{
+    display: inline;
+  }
+
+  .md\:max-w-none{
+    max-width: none;
+  }
+
+  .md\:max-w-4xl{
+    max-width: 56rem;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
